# python-grpc-google-iam-v1

./: CHANGELOG.md  README.rst  noxfile.py  owlbot.py  pyproject.toml  pytest.ini  setup.py
.github/workflows/: unittest.yml
.kokoro/: release.sh  requirements.txt
.kokoro/release/: common.cfg
google/iam/v1/: iam_policy_pb2.py  iam_policy_pb2.pyi  iam_policy_pb2_grpc.py  options_pb2.py  policy_pb2.py  policy_pb2.pyi  policy_pb2_grpc.py  resource_policy_member_pb2.py  resource_policy_member_pb2.pyi
google/iam/v1/logging/: audit_data_pb2.py  audit_data_pb2.pyi
